<resources>
    <string name="app_name">PhoneTV</string>

    <string name="verion_info">CopyRight©2015-2020 wasu</string>
    <string name="wasu_phone_tv">华数手机电视</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_check_network">请检查网络连接</string>
    <string name="skip">跳过</string>
    <string name="click_head_login">点击头像登录</string>
    <string name="level">等级</string>
    <string name="watch_time">观看时间</string>
    <string name="wasu_tv">华数TV</string>
    <string name="drawer_close">Close nav drawer</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="home">主页</string>
    <string name="recommend">推荐</string>
    <string name="watch_people">%d人</string>
    <string name="username_or_passwd_error">用户名或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="person_center">个人中心</string>
    <string name="offline_save">离线缓存</string>
    <string name="watch_history">观看历史</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="version_explain">版本说明</string>
    <string name="open_source_explain">开源说明</string>
    <string name="bug_report">问题反馈</string>
    <string name="team_info">团队介绍</string>
    <string name="person_info">个人信息</string>
    <string name="title">标题</string>

    <string name="attention">关注%d</string>
    <string name="fans">粉丝%d</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>

    <string name="logging_normal">Normal</string>

    <string name="logging_verbose">Verbose</string>

    <string name="retry">Retry</string>

</resources>
