<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/user_default"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_iv_head"
        android:layout_marginTop="40dp"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_et_username"
        android:layout_centerInParent="true"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_width="match_parent"
        android:hint="@string/please_input_username"
        android:maxLines="1"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_below="@id/login_et_username"
        android:inputType="textPassword"
        android:hint="@string/please_input_password"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/login_ib_login"
        android:text="@string/login"
        android:background="#0066cc"
        android:layout_below="@id/login_et_password"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:layout_height="45dp"/>

</RelativeLayout>